--- a/styles.css
+++ b/styles.css
@@ -224,3 +224,22 @@ h1 {
     text-decoration: none;
     opacity: 1;
 }
+
+/* sort button to add */
+#sortButton {
+    padding: 10px 20px;
+    margin-left : 10px;
+    font-size: 1rem;
+    color: #fff;
+    background-color: #17a2b8;
+    border: none;
+    border-radius: 5px;
+    text-transform: lowercase;
+    cursor: pointer;
+    transition: all .2s ease;
+}
+
+#sortButton:hover {
+    background-color: #117a8b;
+    transform: scale(1.1);
+}
