--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ background: linear-gradient(144deg, rgba(131,58,180,.3) 0%, rgba(253,29,29,0.152
 background: linear-gradient(144deg, rgba(131,58,180,.3) 0%, rgba(253,29,29,0.1522584033613445) 50%, rgba(252,176,69,.1) 100%);
     
     padding: 10px;
+    margin-bottom: 10px;
     border-radius: 10px;
     transition: all .3s ease;
 }
